[package]
edition = "2021"
name = "ronny"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = {version = "4.4.14", features = ["derive"]}
log = {version = "0.4"}
tokio = {version = "1", features = ["full"]}
